# NumMethodsPhysics_course_codes

./: .gitignore  CMakeLists.txt  README.md
course_modules/: CMakeLists.txt
course_modules/mod_00/: CMakeLists.txt
course_modules/mod_00/tmp_00/: CMakeLists.txt  gnuplot.hpp  main.cpp
course_modules/mod_01/: CMakeLists.txt
course_modules/mod_01/tmp_01/: CMakeLists.txt  MetropolisEvolver.cpp  MetropolisEvolver.hpp  main.cpp
docs/: index.html
nm4pLib/: CMakeLists.txt
